Speeding up integration tests execution by giving more memory